fixed z-index btn.scroll

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -458,7 +458,7 @@ section.menu-sm {
     overflow-x: hidden;
     height: 100vh;
     padding: 0;
-    z-index: 2000;
+    z-index: 10001;
     width: 0;
     opacity: 0;
     transition: all 500ms ease-in-out;
